non-msrv-tests/tests/ui/item_option_syntax.stderr
error: key-value macro attributes are not supported
 --> tests/ui/item_option_syntax.rs:3:1
  |
3 | #[derive_where = "invalid"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected option syntax
 --> tests/ui/item_option_syntax.rs:3:18
  |
3 | #[derive_where = "invalid"]
  |                  ^^^^^^^^^

error: empty `derive_where` found
 --> tests/ui/item_option_syntax.rs:6:1
  |
6 | #[derive_where()]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected option syntax
 --> tests/ui/item_option_syntax.rs:9:16
  |
9 | #[derive_where(Debug = "option")]
  |                ^^^^^^^^^^^^^^^^

error: empty attribute option found
  --> tests/ui/item_option_syntax.rs:12:16
   |
12 | #[derive_where(Debug())]
   |                ^^^^^^^

error: `Debug` doesn't support any options
  --> tests/ui/item_option_syntax.rs:15:16
   |
15 | #[derive_where(Debug(option))]
   |                ^^^^^^^^^^^^^
